[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "envdiff"
version = "0.1.0"
description = "Compare .env files across environments and highlight missing or mismatched keys."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
keywords = ["env", "dotenv", "diff", "devops"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Utilities",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
]

[project.scripts]
envdiff = "envdiff.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["."]
include = ["envdiff*"]
